# Hierarchical-Saliency-Attentive-Transformer-for-Video-Summarization

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  train.py
configs/: default.yaml
data/: __init__.py  dataset.py  extract_features.py  video_utils.py
models/: __init__.py  dpsa.py  hisat.py  htpe.py  predictor.py  saliency_encoder.py  ssfb.py
paper/: draft.md
tests/: test_model.py
utils/: __init__.py  assembly.py  knapsack.py  kts.py  losses.py  metrics.py
